--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-1/highlights.html
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-1/highlights.html
@@ -31,7 +31,7 @@
                 <div class="loader-section section-right"></div>
                 
                 <div class="loader-section section-loading">
-                     <h1>Loading...&nbsp;&nbsp;</h1>
+                     <h1>Loading...&nbsp;</h1>
                 </div>
             </div>
             
