Update Hyrax (DiCE) Presentation
Update Hyrax (DiCE) Presentation

--- a/research-development/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/research-development/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -112,6 +112,8 @@ img {vertical-align: middle;}
 <br>
 <br>
 
+<h1>Hyrax Project (DiCE - Distributed Computing at the Edge): Presentation</h1>
+
 <div class="slideshow-container">
 
 <div class="mySlides fade">
@@ -618,13 +620,6 @@ img {vertical-align: middle;}
     </p>
 </center>
 <hr>
-
-<!--
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-</div>-->
 
 <script>
 var slideIndex = 1;
