--- a/research-development/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/research-development/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -112,7 +112,9 @@ img {vertical-align: middle;}
 <br>
 <br>
 
-<h1>Hyrax Project (DiCE - Distributed Computing at the Edge): Presentation</h1>
+<center>
+	<h1>Hyrax Project (DiCE - Distributed Computing at the Edge): Presentation</h1>
+</center>
 
 <div class="slideshow-container">
 
