Update Hyrax-DiCE's Presentation
Update Hyrax-DiCE's Presentation

--- a/research-development/hyrax-dice/presentation/hyrax-dice-presentation.html
+++ b/research-development/hyrax-dice/presentation/hyrax-dice-presentation.html
@@ -113,7 +113,7 @@ img {vertical-align: middle;}
 <br>
 
 <center>
-	<h1>Hyrax Project (DiCE - Distributed Computing at the Edge): Presentation</h1>
+	<h1 style="color:white">Hyrax Project (DiCE - Distributed Computing at the Edge): Presentation</h1>
 </center>
 
 <div class="slideshow-container">
