--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-bg: "photo7.jpg"
+bg: "photo36.jpg"
 layout: default
-crawlertitle: "Rúben André Barreiro's Blog - Home"
+crawlertitle: "Rúben André Barreiro's Portfolio/Blog - Home"
 title: "Home"
-summary: "Welcome to my <i>GitHub's Page/Personal Blog</i>!"
+summary: "Welcome to my <i>GitHub's Porfolio/Personal Blog</i>!"
 ---
 
 {% for post in site.posts limit: 5 %}
