Some minor changes
Some minor changes

--- a/photoshoots/2018-04-24-alexandre-campinas-photoshoots-01/highlights.html
+++ b/photoshoots/2018-04-24-alexandre-campinas-photoshoots-01/highlights.html
@@ -99,7 +99,7 @@ href="https://www.instagram.com/alexandrecampinasphoto/">https://www.instagram.c
 				<a href="imgs/41.jpg"><img src="imgs/41.jpg"></img></a>
 				<a href="imgs/42.jpg"><img src="imgs/42.jpg"></img></a>	
 				<a href="imgs/43.jpg"><img src="imgs/43.jpg"></img></a>
-				<a href="imgs/black.jpg"><img src="imgs/black.jpg"></img></a>
+				<a href="imgs/end.jpg"><img src="imgs/end.jpg"></img></a>
 
             </div>
 		</div>
