--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-01/highlights.html
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-01/highlights.html
@@ -98,7 +98,7 @@ href="https://www.instagram.com/davidoliveiraphotos/">https://www.instagram.com/
 				<a href="imgs/40.jpg"><img src="imgs/40.jpg"></img></a>
 				<a href="imgs/41.jpg"><img src="imgs/41.jpg"></img></a>
 				<a href="imgs/42.jpg"><img src="imgs/42.jpg"></img></a>	
-				<a href="imgs/black.jpg"><img src="imgs/black.jpg"></img></a>
+				<a href="imgs/end.jpg"><img src="imgs/end.jpg"></img></a>
 
             </div>
 		</div>
