Some minor changes
Some minor changes

--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-01/highlights.html
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-01/highlights.html
@@ -98,6 +98,20 @@ href="https://www.instagram.com/davidoliveiraphotos/">https://www.instagram.com/
 				<a href="imgs/40.jpg"><img src="imgs/40.jpg"></img></a>
 				<a href="imgs/41.jpg"><img src="imgs/41.jpg"></img></a>
 				<a href="imgs/42.jpg"><img src="imgs/42.jpg"></img></a>	
+				<a href="imgs/43.jpg"><img src="imgs/43.jpg"></img></a>	
+				<a href="imgs/44.jpg"><img src="imgs/44.jpg"></img></a>	
+				<a href="imgs/45.jpg"><img src="imgs/45.jpg"></img></a>	
+				<a href="imgs/46.jpg"><img src="imgs/46.jpg"></img></a>	
+				<a href="imgs/47.jpg"><img src="imgs/47.jpg"></img></a>	
+				<a href="imgs/48.jpg"><img src="imgs/48.jpg"></img></a>	
+				<a href="imgs/49.jpg"><img src="imgs/49.jpg"></img></a>	
+				<a href="imgs/50.jpg"><img src="imgs/50.jpg"></img></a>	
+				<a href="imgs/51.jpg"><img src="imgs/51.jpg"></img></a>	
+				<a href="imgs/52.jpg"><img src="imgs/52.jpg"></img></a>	
+				<a href="imgs/53.jpg"><img src="imgs/53.jpg"></img></a>	
+				<a href="imgs/54.jpg"><img src="imgs/54.jpg"></img></a>	
+				<a href="imgs/55.jpg"><img src="imgs/55.jpg"></img></a>	
+				<a href="imgs/56.jpg"><img src="imgs/56.jpg"></img></a>	
 				<a href="imgs/end.jpg"><img src="imgs/end.jpg"></img></a>
 
             </div>
