Some minor changes
Some minor changes

--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-01/highlights.html
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-01/highlights.html
@@ -37,7 +37,7 @@
             
 			<div id="overlay" class="content">
 				<div class="inner">
-					<h1>Summer Photosession 2018 <span>by David Oliveira Photos</span></h1>
+					<h1>Summer Photosession 2018 <span>by David Oliveira Fotografia</span></h1>
 					<h2>
                         <p align="justify"><u><b>LOCATION OF PHOTOSESSION:</b></u></p>
                         <p align="justify">&nbsp;&nbsp;<b>Porto and Vila Nova de Gaia, Portugal (Outdoor)</b>
