Some minor changes
Some minor changes

--- a/projects/webgl/2d-fractals-mandelbrot-julia/2d-fractals-mandelbrot-julia.html
+++ b/projects/webgl/2d-fractals-mandelbrot-julia/2d-fractals-mandelbrot-julia.html
@@ -10,7 +10,7 @@
 <html>
 <head>
 
-<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/JavaScript_Logo_1.png"/>
+<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/javascript-logo-1.png"/>
     
 <script id="vertex-shader" type="x-shader/x-vertex">
         uniform float scale;
@@ -64,7 +64,7 @@
         }
 </script>
     
-<script type="text/javascript" src="fractals.js"></script>
+<script type="text/javascript" src="2d-fractals-mandelbrot-julia.js"></script>
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
