Some minor fixes
Some minor fixes

--- a/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.html
+++ b/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.html
@@ -43,7 +43,7 @@
         <script type="text/javascript" src="../common/MV.js"></script>
         <script type="text/javascript" src="../common/cube.js"></script>
         <script type="text/javascript" src="../common/sphere.js"></script>
-        <script type="text/javascript" src="../Common/quadPyramid.js"></script>
+        <script type="text/javascript" src="../common/quadPyramid.js"></script>
         <script type="text/javascript" src="../common/torus.js"></script>
         <script type="text/javascript" src="../common/cone.js"></script>   
         <script type="text/javascript" src="../common/cylinder.js"></script>   
