--- a/projects/webgl/2d-fractals-mandelbrot-julia/2d-fractals-mandelbrot-julia.html
+++ b/projects/webgl/2d-fractals-mandelbrot-julia/2d-fractals-mandelbrot-julia.html
@@ -80,7 +80,7 @@
         Oops... your browser doesn't support the HTML5 canvas element"
     </canvas>
    
-    <h3>Computer Science and Engineering MSc <i>(FCT/UNL)</i></h3>
+    <h3>Computer Science and Engineering Integrated MSc. <i>(FCT NOVA | FCT/UNL)</i></h3>
     <h4>Computer Graphics and Interfaces - Lab Work 1</h4>
     </div>
         
