--- a/projects/webgl/2d-rotative-shapes-dance/2d-rotative-shapes-dance.html
+++ b/projects/webgl/2d-rotative-shapes-dance/2d-rotative-shapes-dance.html
@@ -405,7 +405,7 @@ void main() {
 <script type="text/javascript" src="../common/webgl-utils.js"></script>
 <script type="text/javascript" src="../common/initShaders.js"></script>
 <script type="text/javascript" src="../common/MV.js"></script>
-<script type="text/javascript" src="2d-rotative-shapes.js"></script>    
+<script type="text/javascript" src="2d-rotative-shapes-dance.js"></script>    
 </head>
 
 <body>
