--- a/projects/webgl/3d-object-modelling-robot-hand/3d-object-modelling-robot-hand-demo.html
+++ b/projects/webgl/3d-object-modelling-robot-hand/3d-object-modelling-robot-hand-demo.html
@@ -99,9 +99,9 @@ void main() {
 <script type="text/javascript" src="../common/webgl-utils.js"></script>
 <script type="text/javascript" src="../common/initShaders.js"></script>
 <script type="text/javascript" src="../common/MV.js"></script>
-<script type="text/javascript" src="cube.js"></script>
-<script type="text/javascript" src="sphere.js"></script>
-<script type="text/javascript" src="cylinder.js"></script>
+<script type="text/javascript" src="../common/cube.js"></script>
+<script type="text/javascript" src="../common/sphere.js"></script>
+<script type="text/javascript" src="../common/cylinder.js"></script>
 <script type="text/javascript" src="3d-object-modelling-robot-hand-demo.js"></script>
 
 </head>
