Some minor updates
Some minor updates

--- a/projects/webgl/2d-rotative-shapes-dance/2d-rotative-shapes-dance.html
+++ b/projects/webgl/2d-rotative-shapes-dance/2d-rotative-shapes-dance.html
@@ -416,7 +416,7 @@ void main() {
     </canvas>
     
     <h2>Author: <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648</h2>
-    <h3>Computer Science and Engineering MSc <i>(FCT/UNL)</i></h3>
+    <h3>Computer Science and Engineering Integrated MSc. <i>(FCT NOVA | FCT/UNL)</i></h3>
     <h4>Computer Graphics and Interfaces - Lab Work 1</h4>
     
     <b>Instructions:</b>
