--- a/projects/webgl/3d-object-modelling-helicopter/3d-object-modelling-helicopter-demo.html
+++ b/projects/webgl/3d-object-modelling-helicopter/3d-object-modelling-helicopter-demo.html
@@ -109,7 +109,7 @@ void main() {
         </canvas>
         
         <h2>Author: <u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648</h2>
-        <h3>Computer Science and Engineering MSc <i>(FCT/UNL)</i></h3>
+        <h3>Computer Science and Engineering Integrated MSc. <i>(FCT NOVA | FCT/UNL)</i></h3>
         <h4>Computer Graphics and Interfaces - Lab Work 3</h4>
     </div>
     <div id="instructions" style="display: inline-block; vertical-align: top">
