Some minor changes
Some minor changes

--- a/projects/webgl/3d-object-modelling-helicopter/3d-object-modelling-helicopter-demo.html
+++ b/projects/webgl/3d-object-modelling-helicopter/3d-object-modelling-helicopter-demo.html
@@ -114,10 +114,10 @@ void main() {
     </div>
     <div id="instructions" style="display: inline-block; vertical-align: top">
         <h2>Instructions:</h2>
-        <p>&nbsp;&nbsp;- <b>Up arrow (↑)</b> key to move up the helicopter;</p>
-        <p>&nbsp;&nbsp;- <b>Down arrow (↓)</b> key to move down the helicopter;</p>
-        <p>&nbsp;&nbsp;- <b>Left arrow (←)</b> key to make a circular move for the helicopter;</p>
-        <p>&nbsp;&nbsp;- Choose the pretended <b>Angles Factors</b> (<b><i>&theta;</i></b> and <b><i>&gamma;</i> Angles</b>) for adjust the settings for the <i>Axonometric Projection</i>;</p>
+        <p>&nbsp;- <b>Up arrow (↑)</b> key to move up the helicopter;</p>
+        <p>&nbsp;- <b>Down arrow (↓)</b> key to move down the helicopter;</p>
+        <p>&nbsp;- <b>Left arrow (←)</b> key to make a circular move for the helicopter;</p>
+        <p>&nbsp;- Choose the pretended <b>Angles Factors</b> (<b><i>&theta;</i></b> and <b><i>&gamma;</i> Angles</b>) for adjust the settings for the <i>Axonometric Projection</i>;</p>
         
         <br>
         
