--- a/projects/webgl/2d-fractals-mandelbrot-julia/2d-fractals-mandelbrot-julia.html
+++ b/projects/webgl/2d-fractals-mandelbrot-julia/2d-fractals-mandelbrot-julia.html
@@ -87,9 +87,9 @@
     <div id="authorsInstructionsFactorsAndSets" style="display: inline-block; vertical-align: top">    
         <h2>Authors:
             <br>
-            &nbsp;-&nbsp;<u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
+            -&nbsp;<u><i>R&uacute;ben Andr&eacute; Barreiro</i></u> - no. 42648
             <br>
-            &nbsp;-&nbsp;<u><i>Daniel Pimenta</i></u> - no. 45404
+            -&nbsp;<u><i>Daniel Pimenta</i></u> - no. 45404
         </h2>
         
         <b>Instructions:</b>
