Some minor bug fixes
Some minor bug fixes

--- a/degrees/bachelor-projects-screenshots/slideshow.html
+++ b/degrees/bachelor-projects-screenshots/slideshow.html
@@ -114,7 +114,7 @@ img {vertical-align: middle;}
 
 <hr>
 	<center>
-		<h1 style="color:white">Bachelor in Computer Engineering Sciences at FCT NOVA (Faculty of Sciences and Technology of New University of Lisbon): Project's Screenshots</h1>
+		<h1 style="color:white">Bachelor in Computer Engineering Sciences at <br> FCT NOVA (Faculty of Sciences and Technology of New University of Lisbon): Project's Screenshots</h1>
 	</center>
 <hr>
 
