Some minor updates
Some minor updates

--- a/projects/threejs/3d-object-solar-system/3d-object-solar-system.html
+++ b/projects/threejs/3d-object-solar-system/3d-object-solar-system.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>3D Object Planets' Solar System with Trackball Controls</title>
+		<title>3D Object Planets' Solar System with Sun, Planets, Moons, Orbits and Trackball Controls</title>
 		<meta charset="utf-8">
         <meta name="author" content="Rúben André Barreiro" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
