Some minor changes
Some minor changes

--- a/projects/threejs/3d-object-solar-system/3d-object-solar-system.html
+++ b/projects/threejs/3d-object-solar-system/3d-object-solar-system.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+        <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/javascript-logo-1.png"/>
 		<title>3D Object Planets' Solar System with Sun, Planets, Moons, Orbits and Trackball Controls</title>
 		<meta charset="utf-8">
         <meta name="author" content="Rúben André Barreiro" />
