Some updates on 3D Object's System Solar
Some updates on 3D Object's System Solar

--- a/projects/threejs/3d-object-solar-system/3d-object-solar-system.html
+++ b/projects/threejs/3d-object-solar-system/3d-object-solar-system.html
@@ -222,6 +222,8 @@
                 <br>
                 <input type="checkbox" name="showAxisArrowHelpers" value="showAxisArrowHelpers">Axis Arrow Helpers
                 <br>
+                <input type="checkbox" name="showStarsMilkyWayTexture" value="showStarsMilkyWayTexture" checked>Stars'/Milky Way's Textures
+                <br>
                 <input type="checkbox" name="showPlanetsTextures" value="showPlanetsTextures" checked>Sun's/Planets' Textures
                 <br>
                 <input type="checkbox" name="showPlanetsOrbits" value="showPlanetsOrbits" checked> Planets' Orbits
