Some minor changes
Some minor changes

--- a/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.html
+++ b/projects/webgl/3d-object-viewer-geometric-solids/3d-object-viewer-geometric-solids.html
@@ -1,3 +1,13 @@
+<!-- FCT NOVA | FCT-UNL (Faculty of Sciences and Technology of New University of Lisbon) -->
+<!-- Integrated Master (BSc./MSc.) of Computer Engineering -->
+
+<!-- Computer Graphics and Interfaces (2016-2017) -->
+
+<!-- Lab Work 2 - 3D Object Viewer - Geometric Solids -->
+
+<!-- Daniel Filipe Pimenta - no. 45404 - d.pimenta@campus.fct.unl.pt -->
+<!-- Ruben André Barreiro - no. 42648 - r.barreiro@campus.fct.unl.pt -->
+
 <!DOCTYPE html>
 <html>
     <head>
