--- a/projects/webgl/3d-object-modelling-robotic-hand/3d-object-modelling-robotic-hand.html
+++ b/projects/webgl/3d-object-modelling-robotic-hand/3d-object-modelling-robotic-hand.html
@@ -1,7 +1,12 @@
-<!-- TP3 Modelling demo - CGI 1st semester 2016-2017 
-     42648 Ruben Barreiro r.barreiro@campus.fct.unl.pt
-     45404 Daniel Pimenta d.pimenta@campus.fct.unl.pt -->
+<!-- FCT NOVA | FCT-UNL (Faculty of Sciences and Technology of New University of Lisbon) -->
+<!-- Integrated Master (BSc./MSc.) of Computer Engineering -->
 
+<!-- Computer Graphics and Interfaces (2016-2017) -->
+
+<!-- Lab Work 3 - 3D Modelling - Industrial Automated Robotic Hand -->
+
+<!-- Daniel Filipe Pimenta - no. 45404 - d.pimenta@campus.fct.unl.pt -->
+<!-- Ruben André Barreiro - no. 42648 - r.barreiro@campus.fct.unl.pt -->
 <!DOCTYPE html>
 <html>
     <meta charset="UTF-8">
