Some minor changes
Some minor changes

--- a/projects/webgl/3d-object-modelling-robotic-hand/3d-object-modelling-robotic-hand.html
+++ b/projects/webgl/3d-object-modelling-robotic-hand/3d-object-modelling-robotic-hand.html
@@ -3,7 +3,7 @@
 
 <!-- Computer Graphics and Interfaces (2016-2017) -->
 
-<!-- Lab Work 3 - 3D Modelling - Industrial Automated Robotic Hand -->
+<!-- Lab Work 3 - 3D Object Modelling - Industrial Automated Robotic Hand -->
 
 <!-- Daniel Filipe Pimenta - no. 45404 - d.pimenta@campus.fct.unl.pt -->
 <!-- Ruben André Barreiro - no. 42648 - r.barreiro@campus.fct.unl.pt -->
@@ -179,7 +179,7 @@
         </style>
     </head>
     <body id ="mainbody">
-      <title>3D Modelling - Industrial Automated Robotic Hand</title>
+      <title>3D Object Modelling - Industrial Automated Robotic Hand</title>
         <div id="container" style="display: inline-block">
             <canvas id="gl-canvas" width="946" height="946" style="border-radius: 5px;"> Oops... your browser doesn't support the HTML5 canvas element"
             </canvas>
@@ -212,7 +212,7 @@
             <h4>
                 Lab Work 3
                 <br/>
-                (3D Modelling - Industrial Automated Robotic Hand)
+                (3D Object Modelling - Industrial Automated Robotic Hand)
             </h4>
         </div>
 
