Some minor changes
Some minor changes

--- a/projects/webgl/3d-object-modelling-helicopter/3d-object-modelling-helicopter.html
+++ b/projects/webgl/3d-object-modelling-helicopter/3d-object-modelling-helicopter.html
@@ -98,11 +98,11 @@ void main() {
 <script type="text/javascript" src="../common/cube.js"></script>
 <script type="text/javascript" src="../common/sphere.js"></script>
 <script type="text/javascript" src="../common/cylinder.js"></script>
-<script type="text/javascript" src="3d-object-modelling-helicopter-demo.js"></script>
+<script type="text/javascript" src="3d-object-modelling-flying-helicopter.js"></script>
 
 </head>
 <body>
-  <title>3D Modelling Demo - Flying Helicopter</title>
+  <title>3D Object Modelling - Flying Helicopter</title>
     <div id="container" style="display: inline-block">
         <canvas id="gl-canvas" width="500" height="500">
              Oops... your browser doesn't support the HTML5 canvas element"
