Some minor updates
Some minor updates

--- a/projects/webgl/3d-object-modelling-industrial-automated-robotic-hand/3d-object-modelling-industrial-automated-robotic-hand.html
+++ b/projects/webgl/3d-object-modelling-industrial-automated-robotic-hand/3d-object-modelling-industrial-automated-robotic-hand.html
@@ -6,7 +6,7 @@
 <!-- Lab Work 3 - 3D Object Modelling - Industrial Automated Robotic Hand -->
 
 <!-- Daniel Filipe Pimenta - no. 45404 - d.pimenta@campus.fct.unl.pt -->
-<!-- Ruben André Barreiro - no. 42648 - r.barreiro@campus.fct.unl.pt -->
+<!-- Rúben André Barreiro - no. 42648 - r.barreiro@campus.fct.unl.pt -->
 
 <!DOCTYPE html>
 <html>
