--- a/projects/threejs/3d-object-modelling-solar-system/3d-object-modelling-solar-system.html
+++ b/projects/threejs/3d-object-modelling-solar-system/3d-object-modelling-solar-system.html
@@ -85,7 +85,7 @@
 
 	<body>
 		<div id="intro">
-            <h1>3D Object's Solar System</h1>
+            <h1>3D Object Modelling's Solar System</h1>
             <h3>with Sun, Planets, Moons, Orbits and Trackball Controls</h3>
             <br/>
             <span style="color: #ffff00"> Made with <a href="http://threejs.org" target="_blank" rel="noopener">three.js</a> by <a href="https://rubenandrebarreiro.github.io/" target="_blank" rel="noopener"> Rúben André Barreiro</a></span>
