Some minor changes
Some minor changes

--- a/projects/threejs/3d-object-modelling-solar-system/3d-object-modelling-solar-system.html
+++ b/projects/threejs/3d-object-modelling-solar-system/3d-object-modelling-solar-system.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/rubenandrebarreiro/rubenandrebarreiro.github.io/master/assets/images/javascript-logo-1.png"/>
-		<title>3D Object Planets' Solar System with Sun, Planets, Moons, Orbits and Trackball Controls</title>
+		<title>3D Object Modelling's Solar System with Sun, Planets, Earth's Moon, Orbits and Trackball Controls</title>
 		<meta charset="utf-8">
         <meta name="author" content="Rúben André Barreiro" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -86,7 +86,7 @@
 	<body>
 		<div id="intro">
             <h1>3D Object Modelling's Solar System</h1>
-            <h3>with Sun, Planets, Moons, Orbits and Trackball Controls</h3>
+            <h3>with Sun, Planets, Earth's Moon, Orbits and Trackball Controls</h3>
             <br/>
             <span style="color: #ffff00"> Made with <a href="http://threejs.org" target="_blank" rel="noopener">three.js</a> by <a href="https://rubenandrebarreiro.github.io/" target="_blank" rel="noopener"> Rúben André Barreiro</a></span>
             <br/>
