Some minor updates
Some minor updates

--- a/projects/webgl/3d-object-modelling-flying-helicopter/3d-object-modelling-flying-helicopter.html
+++ b/projects/webgl/3d-object-modelling-flying-helicopter/3d-object-modelling-flying-helicopter.html
@@ -116,7 +116,7 @@ void main() {
       font-size:13px;
       font-weight: bold;
       background-color: #000000;
-      background-image: url("imgs/background.jpg");
+      background-image: url("imgs/JPGs/background.jpg");
     }
 
     #container {
