Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -134,6 +134,7 @@
     </div>
 
     <div id="info">
+      <hr style="top: 80px; visibility:hidden;" />  
       <span id="objectName"></span>
 
       <div id="objectDataInfo1">
