Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -133,8 +133,7 @@
       >
     </div>
 
-    <div id="info">
-      <hr style="top: 80px; visibility:hidden;" />  
+    <div id="info" style="top: 40px"> 
       <span id="objectName"></span>
 
       <div id="objectDataInfo1">
