Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -133,7 +133,7 @@
       >
     </div>
 
-    <div id="info" style="top: 40px"> 
+    <div id="info" style="bottom: 40px"> 
       <span id="objectName"></span>
 
       <div id="objectDataInfo1">
