Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -53,7 +53,7 @@
       #info {
         color: #ffffff;
         position: fixed;
-        top: 0px;
+        bottom: 0px;
         left: 0px;
         padding: 5px;
         box-sizing: border-box;
@@ -133,7 +133,7 @@
       >
     </div>
 
-    <div id="info" style="bottom: 40px; top:auto"> 
+    <div id="info"> 
       <span id="objectName"></span>
 
       <div id="objectDataInfo1">
