Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -117,7 +117,9 @@
     <div id="intro">
       <h1>3D Modelling - Ground and Excited States of an Ion</h1>
       <h3>(B&ouml;hr's Atom Model - Hydrogen Atom)</h3>
-      <h4>with Trackball Controls</h4>
+      <span style="color: #ff0060">
+          <h4>with Trackball Controls</h4>
+      </span>
       <br />
       <span style="color: #ff0060">
         Made with
