Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -117,9 +117,7 @@
     <div id="intro">
       <h1>3D Modelling - Ground and Excited States of an Ion</h1>
       <h3>(B&ouml;hr's Atom Model - Hydrogen Atom)</h3>
-      <span style="color: #ff0060">
-          <h4>with Trackball Controls</h4>
-      </span>
+      <h4><span style="color: #ff0060">with</span> <span style="color: darkorange">Trackball Controls</span></h4>
       <br />
       <span style="color: #ff0060">
         Made with
