Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -961,6 +961,7 @@
                     for(i = 1; i < nucleus_proton_property_keys.length; i++) {
                         
                         var div_data_info_elem_id = "object_data_info_" + i;
+                        alert(div_data_info_elem_id);
                         document.getElementById(div_data_info_elem_id).style.display = "inline";
 
                         var span_data_title_elem_id = "object_data_title_" + i;
