Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -170,6 +170,7 @@
         <br/>
       </div>
     </div>
+    </div>
 
     <script src="../common/build/three.js"></script>
     <script src="../common/js/controls/TrackballControls.js"></script>
