Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -84,8 +84,8 @@
     <div id="options_and_settings">
       <h2>Options/Settings:</h2>
       
-      <h3>Motion:</h3>
-      <div id="motion_settings">
+      <h3>Motions:</h3>
+      <div id="motions_settings">
                 
       <span style="color: #ffffff">Rotations'/Translations' Movements</span>
 
