Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -174,6 +174,12 @@
         <br/>
       </div>
     </div>
+      
+    <div id="copyrights">
+      <h3>Copyrights:</h3>
+        
+      <span style="color: #ffffff">R&uacute;ben Andr&eacute; Barreiro - All Rights Reserved</span>  
+    </div>
 
     <script src="../common/build/three.js"></script>
     <script src="../common/js/controls/TrackballControls.js"></script>
