Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -112,8 +112,8 @@
 
         <br/>
 
-        <input type="radio" name="camera_view_radios" value="from_up_view" checked='true'>
-        From Up &nbsp;&nbsp;
+        <input type="radio" name="camera_view_radios" value="top_view" checked='true'>
+        Top &nbsp;&nbsp;
         <input
           type="radio"
           name="camera_view_radios"
