Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -178,7 +178,9 @@
     <div id="copyrights">
       <h3>Copyrights:</h3>
         
-        <span style="color: #ffffff">&#x24B8; R&uacute;ben Andr&eacute; Barreiro - <span style="color: darkorange">Learning Quantum Computing (Online Web Course)</span> - All Rights Reserved</span>  
+        <span style="color: darkorange">Learning Quantum Computing (Online Web Course)</span>
+        <br />
+        <span style="color: #ffffff">&#x24B8; R&uacute;ben Andr&eacute; Barreiro - All Rights Reserved</span>
     </div>
 
     <script src="../common/build/three.js"></script>
