Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
+++ b/projects/threejs/3d-object-modelling-ground-and-excited-states-of-an-ion/3d-object-modelling-ground-and-excited-states-of-an-ion.html
@@ -27,7 +27,7 @@
   <body>
       
     <div id="intro">
-      <h1>3D Modelling - Ground and Excited States of an Ion</h1>
+      <h1>3D Object Modelling - Ground and Excited States of an Ion</h1>
       <h3>(B&ouml;hr's Atom Model - Hydrogen Atom)</h3>
       <h4><span style="color: #ff0060">with</span> <span style="color: darkorange">Trackball Controls</span></h4>
       <br />
