Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators.html
+++ b/projects/threejs/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators/3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators.html
@@ -218,6 +218,7 @@
     <hr style="height:30pt; visibility:hidden;" />
 
     <script src="3d-object-modelling-bloch-sphere-qubit-and-single-quantum-logic-gates-operators.js"></script>
+    <script type="module" src="math.js"></script>      
       
   </body>
 </html>
