Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment.html
+++ b/projects/threejs/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment.html
@@ -123,7 +123,7 @@
           name="particle_spins_radios"
           value="flipping"
         />
-        Flipping Coin
+        Flipping Coin (Bitcoin)
         <br />
         &nbsp;&nbsp;&nbsp;[ <sup>1</sup>&frasl;<sub>&#8730;2</sub>|Heads (&#8595;)⟩ +
         <sup>1</sup>&frasl;<sub>&#8730;2</sub>|Tails (&#8593;)⟩ ]
@@ -133,7 +133,7 @@
           name="particle_spins_radios"
           value="flipping"
         />
-        Spinning Coin
+        Spinning Coin (Bitcoin)
         <br />
         &nbsp;&nbsp;&nbsp;[ <sup>1</sup>&frasl;<sub>&#8730;2</sub>|Heads (&#8595;)⟩ +
         <sup>1</sup>&frasl;<sub>&#8730;2</sub>|Tails (&#8593;)⟩ ]
