Some minor changes added
Some minor changes added

--- a/projects/threejs/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment.html
+++ b/projects/threejs/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment/3d-object-modelling-flipping-spinning-a-coin-bitcoin-experiment.html
@@ -105,23 +105,23 @@
       <h3>Specific options:</h3>
       <div id="specific_options">
                 
-        <span style="color: #ffffff">Quantum States of the Particle's Spin</span>
+        <span style="color: #ffffff">Quantum States of the Coin (Bitcoin)</span>
 
         <hr style="height:1pt; visibility:hidden;" />  
         
-        <input type="radio" name="particle_spins_radios" value="heads" checked = true />
+        <input type="radio" name="bitcoin_state_radios" value="heads" checked = true />
         Heads (&#8595;) &nbsp;&nbsp;
         <input
           type="radio"
-          name="particle_spins_radios"
+          name="bitcoin_state_radios"
           value="tails"
         />
         Tails (&#8593;)
         <br />
         <input
           type="radio"
-          name="particle_spins_radios"
-          value="flipping"
+          name="bitcoin_state_radios"
+          value="flipping_coin"
         />
         Flipping Coin (Bitcoin)
         <br />
@@ -130,8 +130,8 @@
         <br />
         <input
           type="radio"
-          name="particle_spins_radios"
-          value="flipping"
+          name="bitcoin_state_radios"
+          value="spinning_coin"
         />
         Spinning Coin (Bitcoin)
         <br />
